[gd_scene format=3 uid="uid://ckwnp346yqoti"]

[ext_resource type="Script" uid="uid://csje0lqoac68q" path="res://scripts/cat_brain.gd" id="1_7jxut"]
[ext_resource type="SpriteFrames" uid="uid://ekbo6oovgxb0" path="res://animations/cat.tres" id="2_7jxut"]
[ext_resource type="Texture2D" uid="uid://brlqbui27jqjn" path="res://sprites/shadow.png" id="3_lofro"]
[ext_resource type="AudioStream" uid="uid://bc8edy7he1anw" path="res://sounds/sound effects/meow.mp3" id="4_0m5c4"]
[ext_resource type="PackedScene" uid="uid://k2k1j0y25ebx" path="res://objects/helpers/IInteractable.tscn" id="4_7jxut"]
[ext_resource type="AudioStream" uid="uid://dvfmsx5dolnp7" path="res://sounds/sound effects/meow2.wav" id="6_uki8m"]
[ext_resource type="AudioStream" uid="uid://dbqeekcm7ern" path="res://sounds/sound effects/meow4.wav" id="7_cy1mn"]
[ext_resource type="AudioStream" uid="uid://pkgor7kaslsk" path="res://sounds/sound effects/meow5.wav" id="8_yun16"]
[ext_resource type="AudioStream" uid="uid://bk4v0u4evgskv" path="res://sounds/sound effects/meow6.wav" id="9_d4tls"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rsrf8"]
radius = 6.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_d4tls"]
random_pitch = 1.0905077
random_volume_offset_db = 3.0
streams_count = 6
stream_0/stream = ExtResource("4_0m5c4")
stream_1/stream = ExtResource("6_uki8m")
stream_2/stream = ExtResource("7_cy1mn")
stream_3/stream = ExtResource("8_yun16")
stream_4/stream = ExtResource("9_d4tls")

[node name="Cat" type="CharacterBody2D" unique_id=722993762]
top_level = true
collision_layer = 8
collision_mask = 3
script = ExtResource("1_7jxut")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1296469098]
position = Vector2(0, 10)
shape = SubResource("CircleShape2D_rsrf8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1132424505]
sprite_frames = ExtResource("2_7jxut")
animation = &"side_idle"
frame_progress = 0.05070259

[node name="Shadow" type="Sprite2D" parent="AnimatedSprite2D" unique_id=1852524726]
modulate = Color(1, 1, 1, 0.26666668)
z_index = -1
position = Vector2(-1.1473894e-05, 15)
scale = Vector2(0.8437493, 0.9375)
texture = ExtResource("3_lofro")

[node name="MeowTimer" type="Timer" parent="." unique_id=1096035267]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." unique_id=2102087505]
target_desired_distance = 20.0
path_max_distance = 20.0
avoidance_enabled = true
debug_enabled = true

[node name="IInteractable" parent="." unique_id=1999549239 instance=ExtResource("4_7jxut")]

[node name="MeowSound" type="AudioStreamPlayer2D" parent="." unique_id=129856843]
position = Vector2(0, 3)
stream = SubResource("AudioStreamRandomizer_d4tls")
volume_db = -2.0
max_distance = 400.0
panning_strength = 3.0
bus = &"Sounds"

[connection signal="timeout" from="MeowTimer" to="." method="_on_meow_timer_timeout"]
[connection signal="on_interaction" from="IInteractable" to="." method="_on_i_interactable_on_interaction"]
